--- a/gatherup/events/templates/static/css/Login.css
+++ b/gatherup/events/templates/static/css/Login.css
@@ -53,7 +53,8 @@ body{
     margin-bottom: 5px; 
     padding: 8px;
     background-color: rgb(40, 43, 46);
-     border-radius: 5px;
-      border: none;
-      width: 45%;
+    border-radius: 5px;
+    border: none;
+    width: 45%;
+    color: white !important;
 }
