profile page, change pass and logout work

--- a/gatherup/events/templates/events/Events.html
+++ b/gatherup/events/templates/events/Events.html
@@ -39,6 +39,9 @@
           <li class="nav-item mx-2">
             <a class="nav-link" href="/upload">Upload</a>
           </li>
+          <li class="nav-item mx-2">
+            <a href="/accounts/profile" ><img class="pic" src="/static/images/default-profile.jpg" alt="profile_pic"></a>
+          </li>
         </ul>
       </div>
     </nav>
