--- a/gatherup/events/templates/events/Home.html
+++ b/gatherup/events/templates/events/Home.html
@@ -36,6 +36,9 @@
           <li class="nav-item mx-2">
             <a class="nav-link" href="/upload">Upload</a>
           </li>
+          <li class="nav-item mx-2">
+            <a href="/accounts/profile" ><img class="pic" src="/static/images/default-profile.jpg" alt="profile_pic"></a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -119,6 +122,9 @@
     </li>
     <li class="nav-item">
       <a class="nav-link" href="mailto:borjan.ladinski@gmail.com?subject=Information%20regarding%20Gather-Up%20application&body=Dear%20Gather-Up%20team," target="_blank"><img src="{% static 'images/mail.png' %}" alt="mail"></a>
+    </li>
+    <li class="nav-item mx-2">
+      <a href="/accounts/profile" ><img class="pic" src="/static/images/default-profile.jpg" alt="profile_pic"></a>
     </li>
   </ul>
 </div>
