--- a/gatherup/accounts/templates/accounts/login.html
+++ b/gatherup/accounts/templates/accounts/login.html
@@ -18,8 +18,8 @@
             {% csrf_token %}
             
             <!-- Display form fields -->
-            <input type="text" name="username" placeholder="Username" required class="input-field"><br>
-            <input type="password" name="password" placeholder="Password" required class="input-field"><br>
+            <input type="text" name="username" placeholder="Username" required class="input-field">
+            <input type="password" name="password" placeholder="Password" required class="input-field">
             
             <button type="submit" class="login-btn">Login</button>
         </form>
