--- a/gatherup/accounts/templates/accounts/signup.html
+++ b/gatherup/accounts/templates/accounts/signup.html
@@ -18,9 +18,9 @@
 
         <form method="POST">
             {% csrf_token %}
-            <input type="text" name="username" placeholder="Username" required class = "input-field"><br>
-            <input type="email" name="email" placeholder="Email" required class = "input-field"><br>
-            <input type="password" name="password" placeholder="Password" required class = "input-field"><br>
+            <input type="text" name="username" placeholder="Username" required class = "input-field">
+            <input type="email" name="email" placeholder="Email" required class = "input-field">
+            <input type="password" name="password" placeholder="Password" required class = "input-field">
             <button type="submit" class="login-btn">Sign Up</button>
             <a href="/accounts/login/" class="login-btn">Login</a></li>
         </form>
