--- a/gatherup/accounts/templates/accounts/profile.html
+++ b/gatherup/accounts/templates/accounts/profile.html
@@ -15,6 +15,7 @@
         <p>{{ request.user.email }}</p>
         <a href="{% url 'password_change' %}" class="btn">Change Password</a>
         <a href="{% url 'logout' %}" class="btn">Logout</a>
+        <a href="/" class="btn">Back</a>
     </div>
 </body>
 </html>
