--- a/gatherup/events/templates/static/css/Events.css
+++ b/gatherup/events/templates/static/css/Events.css
@@ -130,3 +130,30 @@ margin-top:auto;
   box-shadow: none;
 }
 
+.titlece{
+  color: white !important;
+  text-align: center !important;
+  margin-bottom: 30px;
+}
+
+
+.btnce {
+  text-align: center;
+  margin: auto;
+  background-color: #2f363e;
+  padding: 8px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 16px;
+  transition: 0.3s;
+  width: 10%;
+  margin-bottom: 10px;
+}
+
+.btnce:hover {
+  background-color: #48525c;
+  color: white;
+  text-decoration: none;
+}
