--- a/gatherup/events/templates/events/Events.html
+++ b/gatherup/events/templates/events/Events.html
@@ -54,7 +54,7 @@
 
   <!--content of the page-->
   <div  id="event-container">
-    <!-- Event cards will be dynamically loaded here -->
+    <!-- Event cards will be loaded here -->
   </div>
 </div>
 <script>
@@ -112,7 +112,7 @@
           
           eventContainer.appendChild(eventCard);
 
-          // Add event listener for like button
+          // Event listener for like button
           const likeButton = document.getElementById(`likeButton-${event.id}`);
           likeButton.addEventListener('click', function() {
             const likeCount = document.getElementById(`likeCount-${event.id}`);
@@ -129,14 +129,14 @@
               method: 'POST',
               headers: {
                 'Content-Type': 'application/json',
-                'X-CSRFToken': csrftoken,  // <-- Add CSRF token
+                'X-CSRFToken': csrftoken,  
               },
               body: JSON.stringify({ likes: updatedLikes }),
             })
             .then(response => response.json())
             .then(data => {
-              // After server response, update the like count and heart image
-              likeCount.textContent = data.like_count;  // <-- Update displayed like count
+              
+              likeCount.textContent = data.like_count;  
               likeButton.querySelector('img').src = isLiked ? heartOffUrl : heartOnUrl;
             })
             .catch(error => console.error('Error updating like count:', error));
@@ -153,7 +153,7 @@
         const cookies = document.cookie.split(';');
         for (let i = 0; i < cookies.length; i++) {
             const cookie = cookies[i].trim();
-            // Check if this cookie string starts with the name we want
+            
             if (cookie.substring(0, name.length + 1) === (name + '=')) {
                 cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
                 break;
