--- a/gatherup/events/templates/static/css/Events.css
+++ b/gatherup/events/templates/static/css/Events.css
@@ -3,9 +3,9 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    display: flex; /* Flexbox layout to manage footer placement */
+    display: flex; 
     flex-direction: column;
-    min-height: 100vh; /* Full viewport height */
+    min-height: 100vh; 
     margin: 0;
 }
 
@@ -95,11 +95,11 @@ margin-top:auto;
 }
 
 .container.mt-5 {
-  margin-top: 100px !important; /* Custom top margin */
-  padding-top: 20px !important; /* Custom padding at the top */
+  margin-top: 100px !important; 
+  padding-top: 20px !important; 
   
 }
-@media (max-width: 576px) {  /* Adjust the max-width as needed for your design */
+@media (max-width: 576px) {  
   .container.mt-sm-5 {
     margin-top: 180px !important;
     padding-top: 20px !important;
