--- a/gatherup/events/templates/static/css/Home.css
+++ b/gatherup/events/templates/static/css/Home.css
@@ -3,9 +3,9 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    display: flex; /* Flexbox layout to manage footer placement */
+    display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Full viewport height */
+    min-height: 100vh;
     margin: 0;
 }
 
