--- a/gatherup/events/templates/static/css/Upload.css
+++ b/gatherup/events/templates/static/css/Upload.css
@@ -3,9 +3,9 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    display: flex; /* Flexbox layout to manage footer placement */
+    display: flex; 
     flex-direction: column;
-    min-height: 100vh; /* Full viewport height */
+    min-height: 100vh;
     margin: 0;
 }
 
@@ -99,7 +99,7 @@ margin-top:auto;
   color: white;
   justify-content: center;
   align-items: center;
-  background: rgba(33, 32, 32, 0.9); /* optional: adds a dark transparent background */
+  background: rgba(33, 32, 32, 0.9); 
   padding: 40px 0px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
@@ -146,7 +146,7 @@ margin-top:auto;
   
   position: relative;
   display: flex;
-  /* flex-direction: column; */
+  
   margin-bottom: 15px;
   
 }
